Fix inconsistent spacing for air tile; add tooltip for tile abbreviations

--- a/web/main.css
+++ b/web/main.css
@@ -65,6 +65,7 @@ input {
 .Cu {color: brown;}
 .Sn {color: lightsteelblue;}
 .Mg {color: pink;}
+.air {color: white;}
 .cell {color: gray;}
 .mod {color: black;}
 
